--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -77,7 +77,24 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="H",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
++ActionMappings=(ActionName="PressOne",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
++ActionMappings=(ActionName="PressTwo",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
++ActionMappings=(ActionName="PressThree",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
++ActionMappings=(ActionName="PressFour",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Four)
++ActionMappings=(ActionName="PressFive",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Five)
++ActionMappings=(ActionName="PressSix",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Six)
++ActionMappings=(ActionName="PressSeven",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadSeven)
++ActionMappings=(ActionName="PressEight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Eight)
++ActionMappings=(ActionName="PressNine",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadNine)
++ActionMappings=(ActionName="PressOne",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadOne)
++ActionMappings=(ActionName="PressTwo",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadTwo)
++ActionMappings=(ActionName="PressThree",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadThree)
++ActionMappings=(ActionName="PressFour",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadFour)
++ActionMappings=(ActionName="PressFive",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadFive)
++ActionMappings=(ActionName="PressSix",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadSix)
++ActionMappings=(ActionName="PressSeven",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Seven)
++ActionMappings=(ActionName="PressEight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadEight)
++ActionMappings=(ActionName="PressNine",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Nine)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
