--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -95,6 +95,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="PressSeven",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Seven)
 +ActionMappings=(ActionName="PressEight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadEight)
 +ActionMappings=(ActionName="PressNine",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Nine)
++ActionMappings=(ActionName="PressEnterReset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
