--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -96,6 +96,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="PressEight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadEight)
 +ActionMappings=(ActionName="PressNine",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Nine)
 +ActionMappings=(ActionName="PressEnterReset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
++ActionMappings=(ActionName="Menu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
