--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -97,6 +97,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="PressNine",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Nine)
 +ActionMappings=(ActionName="PressEnterReset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
 +ActionMappings=(ActionName="Menu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
++ActionMappings=(ActionName="Menu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
++ActionMappings=(ActionName="ReturnToMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=BackSpace)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
